selfhost/test/parser/bindingdecl_error_no_expr.out
Error at %FILE_NAME%:1:8
Unexpected end of file:
  |  val a =
            ^